--- a/src/Datationbase/Datationbase/Datationbase.csproj
+++ b/src/Datationbase/Datationbase/Datationbase.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database\Actions.cs" />
+    <Compile Include="Implementation\Employee.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Database\Record.cs" />
